Añadidas nuevas vistas principales y el modal

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "barryvdh/laravel-ide-helper": "dev-master"
+        "barryvdh/laravel-ide-helper": "dev-master",
+        "krlove/eloquent-model-generator": "1.0.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
