--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "barryvdh/laravel-ide-helper": "dev-master",
-        "krlove/eloquent-model-generator": "1.0.0"
+        "krlove/eloquent-model-generator": "1.0.0",
+        "illuminate/auth": "5.3.x-dev",
+        "laravelcollective/html": "5.3.x-dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
