--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-ide-helper": "dev-master",
         "krlove/eloquent-model-generator": "1.0.0",
         "illuminate/auth": "5.3.x-dev",
-        "laravelcollective/html": "5.3.x-dev"
+        "laravelcollective/html": "5.3.x-dev",
+        "intervention/image": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
